fix: wrapped children tag with main tag

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 
-body{
+main{
     width: 100vw;
     height: 100vh;
     display: grid;
