--- a/styleMedia.css
+++ b/styleMedia.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 1024px) {
-  body {
+  main {
     column-gap: 1rem;
   }
 
@@ -43,7 +43,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  body {
+  main {
     column-gap: 0.6rem;
   }
 
@@ -78,7 +78,7 @@
 }
 
 @media screen and (max-width: 425px) {
-  body {
+  main {
     height: auto;
     grid-template-areas:
       "a"
